Issue #8474 - Resource.list and Resource.getFileName work
* Introduce Resource.getFileName and use it
* Correct signature of Resource.list and use it

Signed-off-by: Joakim Erdfelt <joakim.erdfelt@gmail.com>